manifests/environments/prod/apps/bff/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
spec:
  template:
    spec:
      containers:
        - name: bff
