manifests/environments/prod/apps/bff/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bff
spec:
  hostnames:
    - arbeidsflate.prod.dis-core.altinn.cloud
